# seiko_qt2100_converter

./: .gitignore  MANIFEST.in  Makefile  README.md  setup.cfg
debian/: changelog  control  copyright  rules  seiko-converter.manpages  seiko_converter.1
seiko_converter/: __main__.py  commons.py  qt2100_converter.py  qt2100_parser.py
test_data/: seiko_qt2100_A10S_timestamped.raw  seiko_qt2100_B1S_1.raw  seiko_qt2100_B1S_2.raw
