[metadata]
name = seiko_converter
version = attr: seiko_converter.__version__
description = Seiko Converter is a software allowing to generate graphs based on the raw data produced by the Seiko Qt-2100 Timegrapher device.
long_description = file: README.md
long_description_content_type = text/markdown
author = Ysard
author_email = ysard_git@gmx.fr
url = https://github.com/ysard/seiko_qt2100_converter

license_files = LICENSE
keywords = printer, seiko, timegrapher, chronograph, seiko qt-2100, centronics, serial, parallel
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    matplotlib>=3.6.3
    pandas>=2.1.4
    numpy>=1.26.3

[options.extras_require]
dev =
    pytest-cov>=2.6.1
    pytest-timeout
    pytest>=6.2.0
    zest.releaser[recommended]
    coverage-badge
    prospector
    pyroma
    check-manifest
doc =
    # Doc
    sphinx
    sphinx_rtd_theme>=1.0.0
    sphinxcontrib-mermaid
    sphinx-argparse

[options.entry_points]
console_scripts =
    seiko_converter = seiko_converter.__main__:main

[zest.releaser]
create-wheel = yes
python-file-with-version = seiko_converter/__init__.py
